Corrected Text alignment using CSS text-align justify

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -56,7 +56,7 @@ section:not(#hero) {
 .section-header p {
   font-size: clamp(1rem, 2vw, 1.25rem);
   color: var(--muted-text-color);
-  text-wrap: balance;
+  text-align: justify;
 }
 
 /* Hero Section */
