--- a/src/styles/lupus.css
+++ b/src/styles/lupus.css
@@ -16,21 +16,12 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .lupus-text {
+  text-align: justify;
   line-height: 1.7;
   font-size: clamp(1rem, 1vw + 0.5rem, 1.125rem);
   color: var(--text-color);
-}
-
-@media (min-width: 768px) {
-  .lupus-content p:first-of-type::first-letter {
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--primary-color);
-    float: left;
-    font-family: var(--secondary-font-family); /* elegant serif style */
-  }
 }
